Chapter 4: Working with Data
Signed-off-by: wu0655 <wu0655@gmail.com>

--- a/Build.Websites.with.Hugo/code/portfolio/config.toml
+++ b/Build.Websites.with.Hugo/code/portfolio/config.toml
@@ -2,3 +2,9 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = "Hugo xx Project"
 theme = "basic"
+
+[params]
+  author = "Brian Hogan"
+  description = "My portfolio site"
+  gh_url = "https://api.github.com/users"
+  gh_user = "wu0655"
